--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ html2text==2025.4.15
 bs4==0.0.2
 tiktoken==0.9.0
 openai==1.70.0
+google-generativeai>=0.8.5
+groq>=0.25.0
+pyyaml>=6.0.2
+tenacity>=9.1.2
